# rust-test

./: .travis.yml  Cargo.toml  hello.docx  ~$hello.docx
.github/workflows/: rust.yml
src/: main.rs
