[package]
name = "zbox-find"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = {version="1.0.192", features=["derive"]}
serde_json = "1.0.108"
clap={ version = "4.4.8", features=["derive"]}
chrono = "0.4.31"

docx-rs = "0.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "s"