[package]
name = "zbox-find"
version = "0.1.0"
edition = "2021"
authors = ["991341954@qq.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/bell152/rust-test"
repository = "https://github.com/bell152/rust-test"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = {version="1.0.192", features=["derive"]}
serde_json = "1.0.108"
clap={ version = "4.4.8", features=["derive"]}
chrono = "0.4.31"

docx-rs = "0.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = "s"